--- a/index.html
+++ b/index.html
@@ -3,50 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            color: black;
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            color: #333;
             margin: 0;
             padding: 0;
-        }
-        .container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 50px;
+            min-height: 100vh;
         }
+
+        h1 {
+            color: white;
+            margin-top: 40px;
+            margin-bottom: 20px;
+            font-weight: 700;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            width: 90%;
+            max-width: 800px;
+            margin-bottom: 60px;
+        }
+
         .card {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 20px;
-            margin: 10px;
-            width: 300px;
             text-decoration: none;
-            color: black;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.2s;
-            cursor: pointer;
+            color: #333;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            transition: transform 0.2s, box-shadow 0.2s;
         }
+
         .card:hover {
-            transform: scale(1.05);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
+
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: #121212;
-                color: white;
+                background: linear-gradient(135deg, #141e30 0%, #243b55 100%);
+                color: #eee;
             }
             .card {
-                background-color: #1e1e1e;
-                color: white;
-                box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+                background-color: rgba(34, 34, 34, 0.9);
+                color: #eee;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
             }
         }
     </style>
 </head>
 <body>
+    <h1>Chizkiyahu Tools</h1>
     <main>
         <div class="container">
             <a href="https://chizkiyahu.github.io/TextDiff/" class="card">
