--- a/index.html
+++ b/index.html
@@ -3,67 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-            color: #333;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            color: black;
             margin: 0;
             padding: 0;
+        }
+        .container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh;
+            margin-top: 50px;
         }
-
-        h1 {
-            color: white;
-            margin-top: 40px;
-            margin-bottom: 20px;
-            font-weight: 700;
-        }
-
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            width: 90%;
-            max-width: 800px;
-            margin-bottom: 60px;
-        }
-
         .card {
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: white;
             padding: 20px;
+            margin: 10px;
+            width: 300px;
             text-decoration: none;
-            color: #333;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            transition: transform 0.2s, box-shadow 0.2s;
+            color: black;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
+            cursor: pointer;
         }
-
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            transform: scale(1.05);
         }
-
         @media (prefers-color-scheme: dark) {
             body {
-                background: linear-gradient(135deg, #141e30 0%, #243b55 100%);
-                color: #eee;
+                background-color: #121212;
+                color: white;
             }
             .card {
-                background-color: rgba(34, 34, 34, 0.9);
-                color: #eee;
-                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
+                background-color: #1e1e1e;
+                color: white;
+                box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
             }
         }
     </style>
 </head>
 <body>
-    <h1>Chizkiyahu Tools</h1>
     <main>
         <div class="container">
             <a href="https://chizkiyahu.github.io/TextDiff/" class="card">
